// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input disabled disabled large-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#616161",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input disabled disabled small-dark-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#BDBDBD",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input disabled disabled small-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#616161",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input disabled disabled standard-dark-ar 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#BDBDBD",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input disabled disabled standard-dark-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#BDBDBD",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input disabled disabled standard-light-ar 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#616161",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input disabled disabled standard-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#616161",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input disabled disabled standard-light-fr 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "opacity": 0.6,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#616161",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error large-light-en 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#D32F2F",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error small-dark-en 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#E57373",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#E57373",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#E57373",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error small-light-en 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#D32F2F",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error standard-dark-ar 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#E57373",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#E57373",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#E57373",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error standard-dark-en 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#E57373",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#E57373",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#E57373",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error standard-light-ar 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#D32F2F",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error standard-light-en 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#D32F2F",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input error error standard-light-fr 1`] = `
{
  "View[0]/Text[2]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#D32F2F",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled large-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled small-dark-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#383838",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled small-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled standard-dark-ar 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#383838",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled standard-dark-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#383838",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled standard-light-ar 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled standard-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input filled variant filled standard-light-fr 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 4,
    "borderWidth": 0,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default large-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default small-dark-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default small-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default standard-dark-ar 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default standard-dark-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#BDBDBD",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#1E1E1E",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default standard-light-ar 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default standard-light-en 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input resting default standard-light-fr 1`] = `
{
  "View[0]/View[0]": {
    "flexDirection": "row",
  },
  "View[0]/View[0]/Text[0]": {
    "color": "#616161",
    "fontSize": 12,
    "fontWeight": "500",
    "letterSpacing": 0,
    "lineHeight": 21,
    "marginBottom": 4,
    "textAlign": "left",
  },
  "View[0]/View[1]": {
    "backgroundColor": "#FAFAFA",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#616161",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;
